# Generated by Django 3.2.9 on 2022-01-19 13:46

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    dependencies = [
        ('despegar', '0011_alter_flight_price'),
    ]

    operations = [
        migrations.AlterField(
            model_name='flight',
            name='flight_type',
            field=models.CharField(choices=[('Normal', 'Normal'), ('Sale', 'Sale')], default='Normal', max_length=10),
        ),
        migrations.AlterField(
            model_name='hotel',
            name='hotel_type',
            field=models.CharField(choices=[('Normal', 'Normal'), ('Sale', 'Sale')], default='Normal', max_length=10),
        ),
        migrations.CreateModel(
            name='Package',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('status', models.IntegerField(choices=[(0, 'Available'), (1, 'Not Available'), (2, 'Blocked')], default=0)),
                ('price', models.FloatField(default=0.0)),
                ('flight', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='despegar.flight')),
                ('hotel', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='despegar.hotel')),
                ('vehicle', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='despegar.vehicle')),
            ],
            options={
                'verbose_name': 'Package',
                'verbose_name_plural': 'Packages',
            },
        ),
    ]
